--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arafat Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="blue-color">Arafat Hussen</span> World!</h1>
+            <h3>Hello.I’m Arafat Hussen.</h3>
+            <p>I’m a designer who codes. I’ve worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful products that help people and make a difference. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+                <a class="link-button" target="blank" href="https://www.linkedin.com/in/arafathussendev/">HIRE ME</a>
+
+                <a class="link-button-2" target="blank" href="https://www.linkedin.com/in/arafathussendev/">signup</a>
+
+        </div>
+        <div class="half-width">
+            <img src="./images/my.png" alt="">
+            
+        </div>
+    </section>
 </body>
+
 </html>
