--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     </section>
     <footer>
-        <p>© Arafat Hussen Parker 2021, a Programming Hero initiative.</p>
+        <p>© Arafat Hussen 2021, a Programming Hero initiative.</p>
     </footer>
 </body>
 
